--- a/index.html
+++ b/index.html
@@ -5,12 +5,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>@School@ - Welcome</title>
     <link rel="stylesheet" href="style.css">
-    <!-- Firebase SDK -->
-    <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-app.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-database.js"></script>
-    <script src="firebase-db.js"></script>
-    <!-- Translations -->
-    <script src="translations.js"></script>
+    // For Firebase JS SDK v7.20.0 and later, measurementId is optional
+const firebaseConfig = {
+  apiKey: "AIzaSyCZEIFGduxqemeWzVP9thr2PmyI-xWbUNE",
+  authDomain: "school-ba050.firebaseapp.com",
+  projectId: "school-ba050",
+  storageBucket: "school-ba050.firebasestorage.app",
+  messagingSenderId: "435913349256",
+  appId: "1:435913349256:web:3551421c4264050031e73d",
+  measurementId: "G-LJYF4HB7DK"
+};
 </head>
 <body>
     <nav class="navbar">
@@ -112,4 +116,5 @@
             window.location.href = 'school-settings.html';
         });
     });
+
 </script>
